[package]
name = "currency_converter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "currency_converter"
path = "src/main.rs"

[[bin]]
name = "curc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
